# ImageCaptureAndCalibration

./: README.md
Camera_calibration_capture_with_synchronzation/: CMakeLists.txt  ReadMe.md
Camera_calibration_capture_with_synchronzation/src/: file_image_reader.cpp  file_image_reader.h  image_reader.h  input_arg_parser.h  talker.cpp  tcam_image_reader.cpp  tcam_image_reader.h  tcamcamera.cpp  tcamcamera.h  tcamimage.cpp  tcamimage.h  tcamprop.h
ImageCapture/: readme.md
ImageCapture/src/cfg/: Tutorials.cfg
ImageCapture/src/src/: talker.cpp  tcamcamera.cpp  tcamcamera.h
calibrationOPENCV4/: CMakeLists.txt  README.md  calib_intrinsic.cpp  calib_intrinsic_right.cpp  calib_stereo.cpp  camera_test.cpp  main.cpp  read_images.cpp  readme.md  relationship between focal length, pixel size, baseline in 3D reconstruction.pptx  rescale.cpp  undistort_rectify.cpp
camera-calibration/: LenTest.cpp  calib_intrinsic.cpp  calib_intrinsic_right.cpp  calib_stereo.cpp  calibration  camera_test.cpp  main.cpp  read_images.cpp  rescale.cpp
